--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 #this repo
 owl2vowl_*
 webvowl_*
+OWLfiles/*
+VOWLfiles/*
 
 
 # Byte-compiled / optimized / DLL files
@@ -132,3 +134,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#macOS
+.DS_Store
